--- a/pom.xml
+++ b/pom.xml
@@ -164,7 +164,12 @@
             </dependency>
             <dependency>
                 <groupId>uk.gov.gchq.maestro</groupId>
-                <artifactId>federation-executor</artifactId>
+                <artifactId>federation-handlers</artifactId>
+                <version>${project.parent.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>uk.gov.gchq.maestro</groupId>
+                <artifactId>proxy-handlers</artifactId>
                 <version>${project.parent.version}</version>
             </dependency>
             <dependency>
