--- a/example/executor-demo/src/main/resources/executorConfig.json
+++ b/example/executor-demo/src/main/resources/executorConfig.json
@@ -1,6 +1,6 @@
 {
-  "class": "uk.gov.gchq.maestro.util.Config",
-  "id" : "demoExampleExecutor",
+  "class": "uk.gov.gchq.maestro.executor.util.Config",
+  "id": "demoExampleExecutor",
   "operationHandlers": {
   }
 }
