--- a/example/pom.xml
+++ b/example/pom.xml
@@ -28,6 +28,7 @@
 
     <modules>
         <module>executor-demo</module>
+        <module>proxy-demo</module>
         <module>federated-demo</module>
     </modules>
 
