--- a/pom.xml
+++ b/pom.xml
@@ -137,12 +137,6 @@
             </dependency>
             <dependency>
                 <groupId>uk.gov.gchq.maestro</groupId>
-                <artifactId>serialisation</artifactId>
-                <version>${project.parent.version}</version>
-                <type>test-jar</type>
-            </dependency>
-            <dependency>
-                <groupId>uk.gov.gchq.maestro</groupId>
                 <artifactId>data</artifactId>
                 <version>${project.parent.version}</version>
             </dependency>
@@ -159,17 +153,24 @@
             </dependency>
             <dependency>
                 <groupId>uk.gov.gchq.maestro</groupId>
-                <artifactId>jcs-cache-service</artifactId>
-                <version>${project.parent.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>uk.gov.gchq.maestro</groupId>
                 <artifactId>federation-handlers</artifactId>
                 <version>${project.parent.version}</version>
             </dependency>
             <dependency>
                 <groupId>uk.gov.gchq.maestro</groupId>
                 <artifactId>proxy-handlers</artifactId>
+                <version>${project.parent.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>uk.gov.gchq.maestro</groupId>
+                <artifactId>executor-demo</artifactId>
+                <classifier>classes</classifier>
+                <version>${project.parent.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>uk.gov.gchq.maestro</groupId>
+                <artifactId>proxy-handlers</artifactId>
+                <type>test-jar</type>
                 <version>${project.parent.version}</version>
             </dependency>
             <dependency>
@@ -183,11 +184,6 @@
                 <version>${project.parent.version}</version>
                 <type>test-jar</type>
                 <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>uk.gov.gchq.maestro</groupId>
-                <artifactId>proxy-executor</artifactId>
-                <version>${project.parent.version}</version>
             </dependency>
             <dependency>
                 <groupId>uk.gov.gchq.maestro</groupId>
@@ -205,6 +201,11 @@
                 <groupId>uk.gov.gchq.maestro</groupId>
                 <artifactId>core-rest</artifactId>
                 <classifier>classes</classifier>
+                <version>${project.parent.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>uk.gov.gchq.maestro</groupId>
+                <artifactId>executor-demo</artifactId>
                 <version>${project.parent.version}</version>
             </dependency>
             <dependency>
