--- a/example/executor-demo/pom.xml
+++ b/example/executor-demo/pom.xml
@@ -135,7 +135,7 @@
                                     ${project.build.outputDirectory}/demoExampleExecutorAConfig.json
                                 </maestro.executor.config>
                                 <maestro.properties>
-                                    ${project.build.outputDirectory}/exampleExecutor.properties <!--TODO examine-->
+                                    ${project.build.outputDirectory}/exampleExecutor.properties <!--TODO examine what goes here that can't go in Executor Config-->
                                 </maestro.properties>
                                 <maestro.error-mode.debug>
                                     false
